--- a/COMP229-F2016-MidTerm-300861065/Site.Master
+++ b/COMP229-F2016-MidTerm-300861065/Site.Master
@@ -33,6 +33,9 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li id="home" runat="server"><a href="Default.aspx"><i class="fa fa-home fa-lg"></i> Home</a></li>
                         <li id="todo" runat="server"><a href="TodoList.aspx"><i class="fa fa-list-alt fa-lg"></i> Todo List</a></li>
+                        <li id="register" runat="server"><a href="Register.aspx"><i class="fa fa-list-alt fa-lg"></i> Register</a></li>
+                        <li id="Login" runat="server"><a href="Login.aspx"><i class="fa fa-list-alt fa-lg"></i> Login</a></li>
+                        <li id="Logout" runat="server"><a href="Logout.aspx"><i class="fa fa-info fa-lg"></i>  Logout</a></li>
                     </ul>
                 </div>
                 <!-- /.navbar-collapse -->
