Final commit with comments and pagination and sorting

--- a/COMP229-F2016-MidTerm-300861065/Content/app.css
+++ b/COMP229-F2016-MidTerm-300861065/Content/app.css
@@ -1,4 +1,9 @@
-﻿/* Sticky footer styles
+﻿ /*Subject : Web Application
+        Name: Bhavin Master
+        Student No: 300861065
+        File Name : TodoDetails.aspx*/
+
+/* Sticky footer styles
 -------------------------------------------------- */
 html {
   position: relative;
